--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 /* General Styles */
 body {
     font-family: 'Roboto', sans-serif;
@@ -17,8 +18,8 @@ header {
 
 header h1 {
     margin: 0;
-    font-family: 'Playfair Display', serif;
-    font-size: 2.5em;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.5em;
 }
 
 nav {
@@ -92,6 +93,7 @@ img:hover {
 /* Gallery Styles */
 .gallery {
     display: flex;
+    flex-direction: column; /* Display items vertically */
     overflow-x: auto; /* Enable horizontal scrolling */
     gap: 10px;
     padding: 10px;
@@ -103,7 +105,7 @@ img:hover {
     flex: 0 0 auto; /* Prevents shrinking and growing */
     width: 200px;
     height: fit-content; /* Set a fixed width for each item */
-    margin-right: 10px;
+    margin-left: auto;
     position: relative;
     cursor: pointer;
     transition: transform 0.3s ease;
