--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ nav {
     display: flex;
     justify-content: center;
     background: #333;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 4px rgba(247, 243, 243, 0.1);
 }
 
 nav a {
@@ -85,7 +85,7 @@ img {
 }
 
 img:hover {
-    transform: scale(1.05);
+    transform: scale(1.01);
     opacity: 0.9;
 }
 
@@ -193,6 +193,24 @@ iframe {
     height: 200px;
 }
 
+.mapbox {
+    position: relative;
+    height: 350px;
+    width: 100%;
+    border-radius: 16px;
+    margin-bottom: 30px;
+    border: 1px solid var(--jet);
+    overflow: hidden;
+  }
+  
+  .mapbox figure { height: 100%; }
+  
+  .mapbox iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+  }
+
 button {
     background: linear-gradient(to right, #FFBF00, #FF7F00);
     color: white;
@@ -249,7 +267,6 @@ footer {
     color: #fff;
     text-align: center;
     padding: 15px 0;
-    position: fixed;
     bottom: 0;
     width: 100%;
     box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.2);
@@ -259,6 +276,42 @@ footer p {
     margin: 0;
     font-size: 1em;
 }
+
+
+/* Admin.css */
+.vertical-form {
+    display: flex;
+    flex-direction: column;
+    max-width: 400px; /* Adjust as needed */
+    margin: 0 auto; /* Center the form horizontally */
+  }
+  
+  .vertical-form label {
+    font-weight: bold;
+    margin-bottom: 8px;
+  }
+  
+  .vertical-form input,
+  .vertical-form textarea {
+    padding: 8px;
+    margin-bottom: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+  
+  .vertical-form button {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    padding: 10px 16px;
+    cursor: pointer;
+  }
+  
+  .vertical-form button:hover {
+    background-color: #0056b3;
+  }
+  
 
 /* Responsive Design */
 @media (max-width: 768px) {
